--- a/css/default.css
+++ b/css/default.css
@@ -4,3 +4,5 @@ body { margin-bottom: 60px; padding-top: 70px; font-family:"Segoe UI","Segoe","H
 .navbar-brand>img{ display:inline;margin:0 10px; } /* add height:100% for bigger images */
 main { font-size:1.25em; }
 .headshot { float:right; margin:5px; }
+.jumbotron>img{ display: block; margin-left: auto; margin-right: auto; }
+.jumbotron>h1{ font-family:Helvetica;text-align:center; }
