--- a/css/default.css
+++ b/css/default.css
@@ -1,23 +1,26 @@
-html { position: relative; min-height: 100%; }
+html { position: relative; min-height: 100%; font-size: 0.9rem; }
 body { margin-bottom: 60px; padding-top: 70px; font-family:"Segoe UI","Segoe","Helvetica Neue",Helvetica,Arial,sans-serif; }
-.footer { position: absolute; bottom: 0; width: 100%; height: 48px; background-color: #f5f5f5; padding-top:6px; }
+.footer { position: absolute; bottom: 0; width: 100%; height: 48px; padding-top:6px; }
 .navbar-brand>img{ display:inline;margin:0 10px; } /* add height:100% for bigger images */
-main { font-size:1.25em; }
+main { font-size:1.2rem; }
+a { color:rgba(51,122,183,1.0); }
 .headshot { float:right; margin:5px; }
 .jumbotron>img{ display: block; margin-left: auto; margin-right: auto; }
 .jumbotron>h1{ font-family:Helvetica;text-align:center; }
 .carousel-indicators { bottom: 0px; margin-bottom: 0px; }
-.navbar-default .navbar-nav > .active { color: #3AB34A; background: #fff }
-.navbar-default .navbar-nav > .active > a,
-.navbar-default .navbar-nav > .active > a:hover,
-.navbar-default .navbar-nav > .active > a:focus{
-  color: #3AB34A; background: #fff
-}
-.navbar-default .navbar-nav > li > a:active,
-.navbar-default .navbar-nav > li > a:hover, 
-.navbar-default .navbar-nav > li > a:focus {
-  background-color: #196633;
+.text-muted-custom { color: rgba(0,0,0,0.7); }
+.navbar-custom .navbar-nav .nav-item a { color: rgba(0,0,0,0.7); }
+.navbar-custom .navbar-nav .nav-item a:active,
+.navbar-custom .navbar-nav .nav-item a:hover, 
+.navbar-custom .navbar-nav .nav-item a:focus {
   color: #CEE379;
+  background-color: #196633;
+}
+.navbar-custom .navbar-nav .active>.nav-link,
+.navbar-custom .navbar-nav .active a:active,
+.navbar-custom .navbar-nav .active a:hover,
+.navbar-custom .navbar-nav .active a:focus{
+  color: #3AB34A; background: #fff
 }
 .hidden {
   display: none;
