--- a/css/default.css
+++ b/css/default.css
@@ -35,3 +35,43 @@ h2 { padding-top: 35px; }
   margin-bottom: 0em;
   padding-bottom: 0em;
 }
+.wrapper {
+  display: grid;
+  grid-gap: 15px;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr) ) ;
+  background-color: fff;
+  color: #196633;
+}
+
+.box {
+  background-color: #196633;
+  color: #fff;
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 1.5em;
+}
+
+.box>img {
+  margin-right: 5px;
+}
+
+.wrapper a { color: #fff; }
+.wrapper a:active,
+.wrapper a:hover, 
+.wrapper a:focus {
+  color: #CEE379;
+  text-decoration: none;
+}
+
+.announcement a {
+  padding: 5px 7px;
+  background-color: #196633;
+  color: #CEE379;
+}
+.announcement a:active,
+.announcement a:hover, 
+.announcement a:focus {
+  background-color: #CEE379;
+  color: #196633;
+  text-decoration: none;
+}
