--- a/css/default.css
+++ b/css/default.css
@@ -5,7 +5,7 @@ body { margin-bottom: 60px; padding-top: 70px; font-family:"Segoe UI","Segoe","H
 main { font-size:1.2rem; }
 a { color:rgba(51,122,183,1.0); }
 h2 { padding-top: 35px; }
-.headshot { float:right; margin:5px; }
+.headshot { float:right; margin:5px; border-radius: 50%; box-shadow:5px 5px 5px #999;}
 .jumbotron>img{ display: block; margin-left: auto; margin-right: auto; }
 .jumbotron>h1{ font-family:Helvetica;text-align:center; }
 .carousel-indicators { bottom: 0px; margin-bottom: 0px; }
