--- a/css/default.css
+++ b/css/default.css
@@ -5,7 +5,9 @@ body { margin-bottom: 60px; padding-top: 70px; font-family:"Segoe UI","Segoe","H
 main { font-size:1.2rem; }
 a { color:rgba(51,122,183,1.0); }
 h2 { padding-top: 35px; }
-.headshot { float:right; margin:5px; border-radius: 50%; box-shadow:5px 5px 5px #999;}
+h3 { color: #196633; }
+section > img.headshot { float:right; margin:5px; border-radius: 50%; box-shadow:5px 5px 5px #999;}
+a > img.headshot { margin:5px; border-radius: 50%; box-shadow:5px 5px 5px #999;}
 .jumbotron>img{ display: block; margin-left: auto; margin-right: auto; }
 .jumbotron>h1{ font-family:Helvetica;text-align:center; }
 .carousel-indicators { bottom: 0px; margin-bottom: 0px; }
@@ -36,6 +38,11 @@ h2 { padding-top: 35px; }
 .hidden {
   display: none;
 }
+
+article {
+  padding-top: 30px;
+}
+
 .sx-verified-seal {
   display: inline-block;
   background-repeat: no-repeat;
@@ -53,12 +60,49 @@ h2 { padding-top: 35px; }
   color: #196633;
 }
 
+.mttbox {
+  box-shadow:5px 5px 5px #fff;
+  border: 1px solid #fff;
+  color: #000;
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 1.3em;
+  text-align: center;
+}
+
+.mttwrapper {
+  display: grid;
+  grid-gap: 15px;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr) ) ;
+  background-color: #fff;
+  color: #196633;
+}
+
+.mttwrapper a { color: #000; }
+.mttwrapper a:focus  {
+  border: 1px solid #fff;
+  box-shadow:5px 5px 5px #fff;
+  color: #000;
+  text-decoration: none;
+}
+.mttwrapper a:hover, 
+.mttwrapper a:active {
+  border: 1px solid #CEE379;
+  box-shadow:5px 5px 5px #CEE379;
+  color: #000;
+  text-decoration: none;
+}
+
 .box {
   background-color: #196633;
   color: #fff;
   border-radius: 5px;
   padding: 5px;
   font-size: 1.3em;
+}
+
+.modal-body ul {
+  list-style-type: none;
 }
 
 .modal-body * li {
